add error handling for network errors

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Movie Favourites</string>
     <string name="image_description_poster">Movie Poster</string>
+    <string name="tmdb_notice">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
 </resources>
