--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Movie Favourites</string>
     <string name="image_description_poster">Movie Poster</string>
     <string name="tmdb_notice">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
+    <string name="movie_header">%1$s (%2$s)</string>
 </resources>
