--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="image_description_poster">Movie Poster</string>
     <string name="tmdb_notice">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
     <string name="movie_header">%1$s (%2$s)</string>
+    <string name="save_as_favourite_content_description">Add to Favourites Button</string>
+    <string name="save_as_favourite">Add To Favourites</string>
 </resources>
