update fragment_movie_detail layout (TMDB legal notice sticking to bottom), add success/error message for adding movie

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="save_as_favourite">Add To Favourites</string>
     <string name="favourite_movies">My Favourite Movies</string>
     <string name="popular_movies">Popular Movies</string>
+    <string name="movie_added">Movie successfully added to Favourites</string>
+    <string name="movie_removed">Movie successfully removed from Favourites</string>
 </resources>
